# claude-code-hooks

./: check-no-emojis.py  main.py  pyproject.toml  run_tests.py
hooks/: README.md  __init__.py  check-no-emojis.py
hooks/claude_code_hooks/: __init__.py  emoji_checker.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_end_to_end.py
tests/integration/: __init__.py  test_hook_integration.py
tests/unit/: __init__.py  test_emoji_checker.py
